tests/invalid/import_module_attr_undefined_function/main.py
import provider


def run_case() -> None:
    x: int = provider.missing()


if __name__ == "__main__":
    run_case()
